2007-02-05  David Makovský (Yakeen) <yakeen@sannyas-on.net>

	* POTFILES.in: Added files that contains translatable strings
	
2007-01-29  David Makovský (Yakeen) <yakeen@sannyas-on.net>

	* cs.po: updated

2007-01-29  David Makovský (Yakeen) <yakeen@sannyas-on.net>

	* POTFILES.in: Added files that contains translatable strings
	
2006-01-15  Wade Berrier  <wberrier@novell.com>

	* POTFILES.in: Update to reflect removed files from r71023:
	Core/src/MonoDevelop.Projects/MonoDevelop.Projects.Parser/SharpAssemblyAttribute.cs
	Core/src/MonoDevelop.Projects/MonoDevelop.Projects.Parser/SharpAssemblyClass.cs
	Core/src/MonoDevelop.Projects/MonoDevelop.Projects.Parser/SharpAssemblyEvent.cs
	Core/src/MonoDevelop.Projects/MonoDevelop.Projects.Parser/SharpAssemblyField.cs
	Core/src/MonoDevelop.Projects/MonoDevelop.Projects.Parser/SharpAssemblyMethod.cs
	Core/src/MonoDevelop.Projects/MonoDevelop.Projects.Parser/SharpAssemblyParameter.cs
	Core/src/MonoDevelop.Projects/MonoDevelop.Projects.Parser/SharpAssemblyProperty.cs
	Core/src/MonoDevelop.Projects/MonoDevelop.Projects.Parser/SharpAssemblyReturnType.cs

	which fixes make dist

2006-12-23  Atsushi Enomoto  <atsushi@ximian.com>

	* ja_JP.po : updates

2006-12-18  Wade Berrier  <wberrier@novell.com>

	* POTFILES.in: Update to reflect removed file:
	Core/src/MonoDevelop.Core.Gui/MonoDevelop.Core.Gui/DefaultFileService.cs,
	which fixes make dist

2006-12-14  Jacob Ilsø Christensen <jacobilsoe@gmail.com>

	* it.po: Updated. Thanks to Milo Casagrande.

2006-12-01 Gideon de Swardt <gdeswardt@gmail.com>

	* POTFILES.in: Added the WelcomePageContent.xml file

2006-11-27  David Makovský (Yakeen) <yakeen@sannyas-on.net>
	
	* cs.po: Updated.

2006-11-26  David Makovský (Yakeen) <yakeen@sannyas-on.net>
	
	* POTFILES.in: Corrected VersionControl.addin.xml path

2006-11-18  Matej Urbas <matej.urbas@gmail.com>

	* sl_SI.po: Refreshed the Slovenian translation.

2006-11-15  David Makovský (Yakeen) <yakeen@sannyas-on.net>
	