@@ -26,14 +26,15 @@ Core/src/MonoDevelop.Core/MonoDevelop.Core.AddIns.Setup/AddinPackage.cs
 Core/src/MonoDevelop.Core/MonoDevelop.Core.AddIns.Setup/AssemblyDependency.cs
 Core/src/MonoDevelop.Core/MonoDevelop.Core.AddIns.Setup/SetupService.cs
 Core/src/MonoDevelop.Core/MonoDevelop.Core.addin.xml
-Core/src/MonoDevelop.Core/MonoDevelop.Core/GettextCatalog.cs.in
-Core/src/MonoDevelop.Core/MonoDevelop.Core/ServiceManager.cs
-Core/src/MonoDevelop.Core/MonoDevelop.Core/GettextCatalog.cs
 Core/src/MonoDevelop.Core/MonoDevelop.Core/FileService.cs
+Core/src/MonoDevelop.Core/MonoDevelop.Core/GettextCatalog.cs
+Core/src/MonoDevelop.Core/MonoDevelop.Core/ServiceManager.cs
 Core/src/MonoDevelop.Dock/DockItem.cs
 Core/src/MonoDevelop.Dock/DockItemGrip.cs
+Core/src/MonoDevelop.Dock/layout.glade
 Core/src/MonoDevelop.Documentation/MonoDevelop.Documentation.addin.xml
 Core/src/MonoDevelop.Ide/Base.glade
+Core/src/MonoDevelop.Ide/gtk-gui/MonoDevelop.Ide.Gui.Dialogs.GotoTypeDialog.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.addin.xml
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.CodeTemplates/CodeTemplateLoader.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Codons/PadCodon.cs
@@ -53,11 +54,11 @@ Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui/AbstractViewContent.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui/AddinUpdateHandler.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.BrowserDisplayBinding/HtmlViewPane.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui/DefaultStatusBarService.cs
-Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui/DefaultWorkbench.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.Dialogs/AssemblyReferencePanel.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.Dialogs/CommonAboutDialog.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.Dialogs/DirtyFilesDialog.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.Dialogs/EditTemplateDialog.cs
+Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.Dialogs/FileSelectorDialog.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.Dialogs/GacReferencePanel.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.Dialogs/IncludeFilesDialog.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.Dialogs/NewFileDialog.cs
@@ -68,8 +69,6 @@ Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.Dialogs/ReplaceInFilesDialog.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.Dialogs/SelectReferenceDialog.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.Dialogs/SharpDevelopAboutPanels.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.Dialogs/WordCountDialog.cs
-Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.Dialogs/FileSelectorDialog.cs
-Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui/DisplayBindingService.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui/Document.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui/HelpViewer.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui/Ide.cs
@@ -77,11 +76,13 @@ Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui/IdeStartup.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.OptionPanels/ExternalToolPanel.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.Pads.ClassPad/CombineNodeBuilder.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.Pads/DefaultMonitorPad.cs
+Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.Pads/ErrorListPad.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.Pads/FileList.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.Pads/FileScout.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.Pads/MonodocTreePad.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.Pads.ProjectPad/CombineNodeBuilder.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.Pads.ProjectPad/FolderNodeBuilder.cs
+Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.Pads.ProjectPad/LinkedFilesFolderNodeBuilder.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFileNodeBuilder.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFolderNodeBuilder.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectNodeBuilder.cs
@@ -90,27 +91,24 @@ Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.Pads.ProjectPad/ResourceFolderNodeB
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.Pads.ProjectPad/ShowAllFilesBuilderExtension.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.Pads.ProjectPad/SystemFileNodeBuilder.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.Pads/SearchResultPad.cs
-Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.Pads/TreeViewPad.cs
-Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.Pads/ErrorListPad.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.Pads/TaskListPad.cs
-Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.Pads.ProjectPad/LinkedFilesFolderNodeBuilder.cs
+Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.Pads/TreeViewPad.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui/ProgressMonitors.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui/ProjectOperations.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui/SdStatusBar.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.Search/SearchReplaceInFilesManager.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui.Search/SearchReplaceManager.cs
-Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui/StartupInfo.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui/StatusProgressMonitor.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui/ViewCommandHandlers.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Gui/Workbench.cs
+Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Tasks/CommentTasksView.cs
+Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Tasks/UserTasksView.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Templates/CombineDescriptor.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Templates/CombineEntryDescriptor.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Templates/FileTemplate.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Templates/ProjectDescriptor.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Templates/ProjectTemplate.cs
 Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Templates/SingleFileDescriptionTemplate.cs
-Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Tasks/UserTasksView.cs
-Core/src/MonoDevelop.Ide/MonoDevelop.Ide.Tasks/CommentTasksView.cs
 Core/src/MonoDevelop.Ide/templates/AppConfigFile.xft.xml
 Core/src/MonoDevelop.Ide/templates/BlankCombine.xpt.xml
 Core/src/MonoDevelop.Ide/templates/EmptyClass.xft.xml
@@ -122,42 +120,66 @@ Core/src/MonoDevelop.Ide/templates/EmptyStruct.xft.xml
 Core/src/MonoDevelop.Ide/templates/EmptyTextFile.xft.xml
 Core/src/MonoDevelop.Ide/templates/EmptyXMLFile.xft.xml
 Core/src/MonoDevelop.Projects.Gui/Base.glade
+Core/src/MonoDevelop.Projects.Gui/gtk-gui/MonoDevelop.Projects.Gui.Deployment.CommandDeployEditorWidget.cs
+Core/src/MonoDevelop.Projects.Gui/gtk-gui/MonoDevelop.Projects.Gui.Deployment.FileCopyConfigurationSelector.cs
+Core/src/MonoDevelop.Projects.Gui/gtk-gui/MonoDevelop.Projects.Gui.Deployment.InstallDeployEditorWidget.cs
+Core/src/MonoDevelop.Projects.Gui/gtk-gui/MonoDevelop.Projects.Gui.Deployment.LocalFileCopyConfigurationEditorWidget.cs
 Core/src/MonoDevelop.Projects.Gui/MonoDevelop.Projects.Gui.addin.xml
 Core/src/MonoDevelop.Projects.Gui/MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs
+Core/src/MonoDevelop.Projects.Gui/MonoDevelop.Projects.Gui.Deployment/DialogFileReplacePolicy.cs
 Core/src/MonoDevelop.Projects.Gui/MonoDevelop.Projects.Gui.Dialogs/CombineOptionsDialog.cs
 Core/src/MonoDevelop.Projects.Gui/MonoDevelop.Projects.Gui.Dialogs.OptionPanels/CombineConfigurationPanel.cs
 Core/src/MonoDevelop.Projects.Gui/MonoDevelop.Projects.Gui.Dialogs.OptionPanels/CombineEntryConfigurationsPanel.cs
 Core/src/MonoDevelop.Projects.Gui/MonoDevelop.Projects.Gui.Dialogs.OptionPanels/CombineStartupPanel.cs
 Core/src/MonoDevelop.Projects.Gui/MonoDevelop.Projects.Gui.Dialogs.OptionPanels/CompileFileProjectOptions.cs
 Core/src/MonoDevelop.Projects.Gui/MonoDevelop.Projects.Gui.Dialogs.OptionPanels/DeployFileOptions.cs
-Core/src/MonoDevelop.Projects.Gui/MonoDevelop.Projects.Gui.Dialogs.OptionPanels/OutputOptionsPanel.cs
 Core/src/MonoDevelop.Projects.Gui/MonoDevelop.Projects.Gui.Dialogs.OptionPanels/DeploymentOptionsPanel.cs
+Core/src/MonoDevelop.Projects.Gui/MonoDevelop.Projects.Gui.Dialogs.OptionPanels/OutputOptionsPanel.cs
 Core/src/MonoDevelop.Projects.Gui/MonoDevelop.Projects.Gui.Dialogs/ProjectOptionsDialog.cs
-Core/src/MonoDevelop.Projects.Gui/MonoDevelop.Projects.Gui.Deployment/DialogFileReplacePolicy.cs
 Core/src/MonoDevelop.Projects/MonoDevelop.Projects.addin.xml
 Core/src/MonoDevelop.Projects/MonoDevelop.Projects/CmbxFileFormat.cs
 Core/src/MonoDevelop.Projects/MonoDevelop.Projects.CodeGeneration/CodeRefactorer.cs
 Core/src/MonoDevelop.Projects/MonoDevelop.Projects/Combine.cs
+Core/src/MonoDevelop.Projects/MonoDevelop.Projects.Deployment/CommandDeployHandler.cs
+Core/src/MonoDevelop.Projects/MonoDevelop.Projects.Deployment/InstallDeployHandler.cs
+Core/src/MonoDevelop.Projects/MonoDevelop.Projects.Deployment/LocalFileCopyHandler.cs
 Core/src/MonoDevelop.Projects/MonoDevelop.Projects/DotNetProject.cs
 Core/src/MonoDevelop.Projects/MonoDevelop.Projects/MdpFileFormat.cs
 Core/src/MonoDevelop.Projects/MonoDevelop.Projects/MdsFileFormat.cs
-Core/src/MonoDevelop.Projects/MonoDevelop.Projects.Parser/CodeCompletionDatabase.cs
 Core/src/MonoDevelop.Projects/MonoDevelop.Projects.Parser/DefaultParserService.cs
-Core/src/MonoDevelop.Projects/MonoDevelop.Projects.Parser/PersistentClass.cs
 Core/src/MonoDevelop.Projects/MonoDevelop.Projects/PrjxFileFormat.cs
 Core/src/MonoDevelop.Projects/MonoDevelop.Projects/Project.cs
-Core/src/MonoDevelop.Projects/MonoDevelop.Projects/UnknownProjectVersionException.cs
 Core/src/MonoDevelop.Projects/MonoDevelop.Projects.Text/TextEncoding.cs
-Core/src/MonoDevelop.Projects/MonoDevelop.Projects.Deployment/InstallDeployHandler.cs
-Core/src/MonoDevelop.Projects/MonoDevelop.Projects.Deployment/LocalFileCopyHandler.cs
-Core/src/MonoDevelop.Projects/MonoDevelop.Projects.Deployment/CommandDeployHandler.cs
-Core/src/Tools/SharpCoco/src/Scanner.cs
+Core/src/MonoDevelop.Projects/MonoDevelop.Projects/UnknownProjectVersionException.cs
+Core/src/MonoDevelop.Startup/MonoDevelop.Startup.glade
+Extras/AspNetAddIn/AspNetAddIn.addin.xml
+Extras/AspNetAddIn/AspNetAddIn.glade
+Extras/AspNetAddIn/Templates/CodeBehindWebControl.xft.xml
+Extras/AspNetAddIn/Templates/CodeBehindWebForm.xft.xml
+Extras/AspNetAddIn/Templates/CodeBehindWebHandler.xft.xml
+Extras/AspNetAddIn/Templates/CodeBehindWebService.xft.xml
+Extras/AspNetAddIn/Templates/EmptyWebControl.xft.xml
+Extras/AspNetAddIn/Templates/EmptyWebForm.xft.xml
+Extras/AspNetAddIn/Templates/EmptyWebHandler.xft.xml
+Extras/AspNetAddIn/Templates/EmptyWebService.xft.xml
+Extras/AspNetAddIn/Templates/MasterPageWithCodeBehind.xft.xml
+Extras/AspNetAddIn/Templates/MasterPageWithNoCodeBehind.xft.xml
+Extras/AspNetAddIn/Templates/WebApplication.xpt.xml
+Extras/AspNetEdit/AspNetEdit.addin.xml
 Extras/BooBinding/BooBinding.addin.xml
+Extras/BooBinding/templates/BooGtkSharpProject.xpt.xml
+Extras/BooBinding/templates/BooGtkSharpWindow.xft.xml
+Extras/BooBinding/templates/BooLibraryProject.xpt.xml
+Extras/BooBinding/templates/EmptyBooFile.xft.xml
+Extras/BooBinding/templates/EmptyBooProject.xpt.xml
 Extras/ChangeLogAddIn/ChangeLogAddIn.addin.xml
 Extras/ChangeLogAddIn/ChangeLogAddInOptionsPanel.cs
+Extras/ChangeLogAddIn/CommitDialogExtensionWidget.cs
+Extras/ChangeLogAddIn/gtk-gui/MonoDevelop.ChangeLogAddIn.AddLogEntryDialog.cs
 Extras/CSharpBinding/CSharpBinding.addin.xml
 Extras/CSharpBinding/CSharpBindingCompilerManager.cs
 Extras/CSharpBinding/CSharp.glade
+Extras/CSharpBinding/gtk-gui/CSharpBinding.CodeGenerationPanelWidget.cs
 Extras/CSharpBinding/Gui/CodeGenerationPanel.cs
 Extras/CSharpBinding/templates/ConsoleProject.xpt.xml
 Extras/CSharpBinding/templates/CSharpSessionStateWebService.xft.xml
@@ -174,12 +196,17 @@ Extras/CSharpBinding/templates/GtkSharpProject.xpt.xml
 Extras/CSharpBinding/templates/GtkSharpWindow.xft.xml
 Extras/CSharpBinding/templates/Library.xpt.xml
 Extras/DebuggerAddIn/MonoDevelopDebugger.addin.xml
+Extras/GladeAddIn/GladeAddIn.addin.xml
 Extras/GladeAddIn/GladeAddIn.Gui/GuiBuilderView.cs
 Extras/GladeAddIn/GladeAddIn.Gui/WindowsFolderNodeBuilder.cs
+Extras/GladeAddIn/templates/GladeDialog.xft.xml
+Extras/GladeAddIn/templates/GladeWindow.xft.xml
 Extras/ILAsmBinding/Gui/CompilerParametersPanel.cs
+Extras/ILAsmBinding/ILAsmBinding.addin.xml
 Extras/ILAsmBinding/ILAsmConsoleProject.xpt.xml
 Extras/JavaBinding/Gui/GlobalOptionsPanel.cs
 Extras/JavaBinding/Gui/ProjectConfigurationPropertyPanel.cs
+Extras/JavaBinding/JavaBinding.addin.xml
 Extras/JavaBinding/Java.glade
 Extras/JavaBinding/templates/EmptyJavaFile.xft.xml
 Extras/JavaBinding/templates/EmptyJavaProject.xpt.xml
@@ -187,6 +214,7 @@ Extras/JavaBinding/templates/IkvmConsoleApplicationProject.xpt.xml
 Extras/JavaBinding/templates/IkvmGladeApplicationProject.xpt.xml
 Extras/JavaBinding/templates/IkvmGnomeApplicationProject.xpt.xml
 Extras/JavaBinding/templates/IkvmGtkApplicationProject.xpt.xml
+Extras/JavaBinding/templates/IkvmLibraryProject.xpt.xml
 Extras/JavaBinding/templates/JavaApplet.xft.xml
 Extras/JavaBinding/templates/JavaApplicationProject.xpt.xml
 Extras/JavaBinding/templates/JavaApplication.xft.xml
@@ -195,32 +223,51 @@ Extras/JavaBinding/templates/JavaDialog.xft.xml
 Extras/JavaBinding/templates/JavaFrame.xft.xml
 Extras/JavaBinding/templates/JavaOKDialog.xft.xml
 Extras/JavaBinding/templates/JavaPanel.xft.xml
+Extras/MonoDevelop.Autotools/Commands.cs
+Extras/MonoDevelop.Autotools/CustomMakefile.cs
+Extras/MonoDevelop.Autotools/gtk-gui/MonoDevelop.Autotools.MakefileOptionPanelWidget.cs
+Extras/MonoDevelop.Autotools/ImportMakefileDialog.cs
+Extras/MonoDevelop.Autotools/MakefileData.cs
+Extras/MonoDevelop.Autotools/MakefileOptionPanelWidget.cs
+Extras/MonoDevelop.Autotools/MakefileProjectServiceExtension.cs
+Extras/MonoDevelop.Autotools/MonoDevelop.Autotools.addin.xml
+Extras/MonoDevelop.Autotools/SimpleProjectMakefileHandler.cs
+Extras/MonoDevelop.Autotools/SolutionDeployer.cs
+Extras/MonoDevelop.Autotools/SolutionMakefileHandler.cs
 Extras/MonoDevelop.Autotools/SolutionOptionsPanel.cs
+Extras/MonoDevelop.Autotools/TarballTargetEditorWidget.cs
+Extras/MonoDevelop.DesignerSupport/MonoDevelop.DesignerSupport.addin.xml
+Extras/MonoDeveloperExtensions/MonoDeveloperExtensions.addin.xml
 Extras/MonoDevelop.GtkCore/gui.glade
 Extras/MonoDevelop.GtkCore/MonoDevelop.GtkCore.addin.xml
 Extras/MonoDevelop.GtkCore/MonoDevelop.GtkCore.Dialogs/BindDesignDialog.cs
 Extras/MonoDevelop.GtkCore/MonoDevelop.GtkCore.Dialogs/ConfirmWindowDeleteDialog.cs
-Extras/MonoDevelop.GtkCore/MonoDevelop.GtkCore.GuiBuilder/GuiBuilderPropertiesPad.cs
-Extras/MonoDevelop.GtkCore/MonoDevelop.GtkCore.GuiBuilder/GuiBuilderView.cs
-Extras/MonoDevelop.GtkCore/MonoDevelop.GtkCore.GuiBuilder/GuiBuilderService.cs
 Extras/MonoDevelop.GtkCore/MonoDevelop.GtkCore.GuiBuilder/ActionGroupView.cs
 Extras/MonoDevelop.GtkCore/MonoDevelop.GtkCore.GuiBuilder/CodeBinder.cs
 Extras/MonoDevelop.GtkCore/MonoDevelop.GtkCore.GuiBuilder/CombinedDesignView.cs
+Extras/MonoDevelop.GtkCore/MonoDevelop.GtkCore.GuiBuilder/GuiBuilderPropertiesPad.cs
+Extras/MonoDevelop.GtkCore/MonoDevelop.GtkCore.GuiBuilder/GuiBuilderService.cs
+Extras/MonoDevelop.GtkCore/MonoDevelop.GtkCore.GuiBuilder/GuiBuilderView.cs
 Extras/MonoDevelop.GtkCore/MonoDevelop.GtkCore.NodeBuilders/WindowsFolderNodeBuilder.cs
+Extras/MonoDevelop.GtkCore/templates/ActionGroupPartial.xft.xml
+Extras/MonoDevelop.GtkCore/templates/ActionGroup.xft.xml
+Extras/MonoDevelop.GtkCore/templates/DialogPartial.xft.xml
+Extras/MonoDevelop.GtkCore/templates/Dialog.xft.xml
+Extras/MonoDevelop.GtkCore/templates/WidgetPartial.xft.xml
+Extras/MonoDevelop.GtkCore/templates/Widget.xft.xml
+Extras/MonoDevelop.GtkCore/templates/WindowPartial.xft.xml
+Extras/MonoDevelop.GtkCore/templates/Window.xft.xml
 Extras/MonoDevelop.SourceEditor/EditorBindings.glade
 Extras/MonoDevelop.SourceEditor/MonoDevelop.SourceEditor.addin.xml
 Extras/MonoDevelop.SourceEditor/MonoDevelop.SourceEditor.Gui.Dialogs/EditTemplateGroupDialog.cs
+Extras/MonoDevelop.SourceEditor/MonoDevelop.SourceEditor.Gui/LanguageItemWindow.cs
 Extras/MonoDevelop.SourceEditor/MonoDevelop.SourceEditor.Gui.OptionPanels/CodeTemplatePanel.cs
 Extras/MonoDevelop.SourceEditor/MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs
 Extras/MonoDevelop.SourceEditor/MonoDevelop.SourceEditor.Gui/SourceEditorWidget.cs
-Extras/MonoDevelop.SourceEditor/MonoDevelop.SourceEditor.Gui/LanguageItemWindow.cs
 Extras/MonoDevelop.SourceEditor/texteditoraddin.glade
-Extras/MonoQuery/Mono.Data.Sql/Providers/MySqlDbProvider.cs
-Extras/MonoQuery/Mono.Data.Sql/Providers/NpgsqlDbProvider.cs
-Extras/MonoQuery/Mono.Data.Sql/Providers/OracleDbProvider.cs
-Extras/MonoQuery/Mono.Data.Sql/Providers/SqlDbProvider.cs
-Extras/MonoQuery/Mono.Data.Sql/Providers/SqliteDbProvider.cs
-Extras/MonoQuery/Mono.Data.Sql/Providers/SybaseDbProvider.cs
+Extras/MonoDevelop.WebReferences/gtk-gui/MonoDevelop.WebReferences.Dialogs.WebReferenceDialog.cs
+Extras/MonoDevelop.WebReferences/MonoDevelop.WebReferences.addin.xml
+Extras/MonoDevelop.WebReferences/MonoDevelop.WebReferences.NodeBuilders/WebReferenceFolderNodeBuilder.cs
 Extras/MonoQuery/MonoQuery/Gui/NodeBuilders/AggregatesNodeBuilder.cs
 Extras/MonoQuery/MonoQuery/Gui/NodeBuilders/ColumnNodeBuilder.cs
 Extras/MonoQuery/MonoQuery/Gui/NodeBuilders/ColumnsNodeBuilder.cs
@@ -248,6 +295,7 @@ Extras/MonoQuery/MonoQuery/Gui/SqlQueryView.cs
 Extras/MonoQuery/MonoQuery/MonoQuery.addin.xml
 Extras/MonoQuery/MonoQuery/monoquery.glade
 Extras/NemerleBinding/EmptyNemerleFile.xft.xml
+Extras/NemerleBinding/NemerleBinding.addin.xml
 Extras/NemerleBinding/NemerleEmptyProject.xpt.xml
 Extras/NemerleBinding/Nemerle.glade
 Extras/NemerleBinding/NemerleGnomeSharpProject.xpt.xml
@@ -264,15 +312,17 @@ Extras/NUnit/nunit.glade
 Extras/NUnit/Project/NUnitAssemblyGroupFileFormat.cs
 Extras/NUnit/Services/NUnitOptions.cs
 Extras/NUnit/templates/NUnitAssemblyGroup.xpt.xml
+Extras/NUnit/templates/NUnitTestClass.xft.xml
+Extras/prj2make-sharp-lib/MSBuildFileFormat.cs
+Extras/prj2make-sharp-lib/MSBuildSolution.cs
 Extras/prj2make-sharp-lib/MsPrjHelper.cs
 Extras/prj2make-sharp-lib/prj2make-sharp-lib.addin.xml
 Extras/prj2make-sharp-lib/prj2make-sharp-lib-Commands.cs
-Extras/prj2make-sharp-lib/prj2make-sharp-lib-Commands.cs
 Extras/prj2make-sharp-lib/SlnFileFormat.cs
-Extras/prj2make-sharp-lib/MSBuildFileFormat.cs
-Extras/prj2make-sharp-lib/MSBuildSolution.cs
 Extras/PythonBinding/Gui/CompilerParametersPanel.cs
-Extras/VBNetBinding/VBBindingCompilerServices.cs
+Extras/PythonBinding/PythonBinding.addin.xml
+Extras/PythonBinding/templates/PythonConsoleProject.xpt.xml
+Extras/PythonBinding/templates/PythonGtkProject.xpt.xml
 Extras/VBNetBinding/Gui/ChooseRuntimePanel.cs
 Extras/VBNetBinding/Gui/CodeGenerationPanel.cs
 Extras/VBNetBinding/templates/EmptyVBFile.xft.xml
@@ -280,32 +330,23 @@ Extras/VBNetBinding/templates/EmptyVBProject.xpt.xml
 Extras/VBNetBinding/templates/VBConsoleApplicationProject.xpt.xml
 Extras/VBNetBinding/templates/VBGtkSharp2Project.xpt.xml
 Extras/VBNetBinding/templates/VBGtkSharpProject.xpt.xml
+Extras/VBNetBinding/VBBindingCompilerServices.cs
 Extras/VBNetBinding/VB.glade
+Extras/VBNetBinding/VBNetBinding.addin.xml
+Extras/VersionControl/MonoDevelop.VersionControl/gtk-gui/MonoDevelop.VersionControl.Dialogs.CommitDialog.cs
+Extras/VersionControl/MonoDevelop.VersionControl/gtk-gui/MonoDevelop.VersionControl.Dialogs.EditRepositoryDialog.cs
+Extras/VersionControl/MonoDevelop.VersionControl/gtk-gui/MonoDevelop.VersionControl.Dialogs.SelectRepositoryDialog.cs
+Extras/VersionControl/MonoDevelop.VersionControl/gtk-gui/MonoDevelop.VersionControl.UrlBasedRepositoryEditor.cs
+Extras/VersionControl/MonoDevelop.VersionControl/MonoDevelop.VersionControl/CommitCommand.cs
+Extras/VersionControl/MonoDevelop.VersionControl/MonoDevelop.VersionControl.Dialogs/CommitDialog.cs
+Extras/VersionControl/MonoDevelop.VersionControl/MonoDevelop.VersionControl/Publish.cs
+Extras/VersionControl/MonoDevelop.VersionControl/MonoDevelop.VersionControl/RevertCommand.cs
+Extras/VersionControl/MonoDevelop.VersionControl/MonoDevelop.VersionControl/VersionControlNodeExtension.cs
+Extras/VersionControl/MonoDevelop.VersionControl/MonoDevelop.VersionControl/VersionControlProjectService.cs
+Extras/VersionControl/MonoDevelop.VersionControl/MonoDevelop.VersionControl.Views/Logs.cs
+Extras/VersionControl/MonoDevelop.VersionControl/MonoDevelop.VersionControl.Views/Statuses.cs
+Extras/VersionControl/MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion.addin.xml
 Extras/VersionControl/MonoDevelop.VersionControl/VersionControl.addin.xml
 Extras/WelcomePage/WelcomePage.addin.xml
 Extras/WelcomePage/WelcomePageOptionPanel.cs
 Extras/WelcomePage/WelcomePageView.cs
-Extras/WelcomePage/WelcomePageContent.xml
-Extras/ChangeLogAddIn/CommitDialogExtensionWidget.cs
-Extras/MonoDevelop.DesignerSupport/MonoDevelop.DesignerSupport.addin.xml
-Extras/VersionControl/MonoDevelop.VersionControl/MonoDevelop.VersionControl.Dialogs/CommitDialog.cs
-Extras/VersionControl/MonoDevelop.VersionControl/MonoDevelop.VersionControl.Views/Statuses.cs
-Extras/VersionControl/MonoDevelop.VersionControl/MonoDevelop.VersionControl.Views/Logs.cs
-Extras/VersionControl/MonoDevelop.VersionControl/MonoDevelop.VersionControl/VersionControlProjectService.cs
-Extras/VersionControl/MonoDevelop.VersionControl/MonoDevelop.VersionControl/RevertCommand.cs
-Extras/VersionControl/MonoDevelop.VersionControl/MonoDevelop.VersionControl/Publish.cs
-Extras/VersionControl/MonoDevelop.VersionControl/MonoDevelop.VersionControl/CommitCommand.cs
-Extras/VersionControl/MonoDevelop.VersionControl/MonoDevelop.VersionControl/VersionControlNodeExtension.cs
-Extras/MonoDevelop.Autotools/SimpleProjectMakefileHandler.cs
-Extras/MonoDevelop.Autotools/SolutionDeployer.cs
-Extras/MonoDevelop.Autotools/Commands.cs
-Extras/MonoDevelop.Autotools/SolutionMakefileHandler.cs
-Extras/MonoDevelop.Autotools/TarballTargetEditorWidget.cs
-Extras/MonoDevelop.Autotools/MakefileProjectServiceExtension.cs
-Extras/MonoDevelop.Autotools/MakefileOptionPanel.cs
-Extras/MonoDevelop.Autotools/ImportMakefileDialog.cs
-Extras/MonoDevelop.Autotools/MakefileOptionPanelWidget.cs
-Extras/MonoDevelop.Autotools/MakefileData.cs
-Extras/MonoDevelop.Autotools/CustomMakefile.cs
-Extras/MonoDevelop.WebReferences/MonoDevelop.WebReferences.NodeBuilders/WebReferenceFolderNodeBuilder.cs
-
