@@ -1,3 +1,7 @@
+2007-02-05  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* POTFILES.in: Updated file list.
+
 2007-02-05  David Makovský (Yakeen) <yakeen@sannyas-on.net>
 
 	* POTFILES.in: Added files that contains translatable strings
